<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.Kumbaram.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_menu"
        app:navigationContentDescription="@string/account_menu"
        app:title="@string/main_admin_title" />

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Kumbaram.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_md"
        android:layout_marginTop="@dimen/space_sm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_md">

            <TextView
                style="@style/TextAppearance.Kumbaram.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invite_code_title" />

            <TextView
                style="@style/TextAppearance.Kumbaram.Footnote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xxs"
                android:text="@string/main_admin_invite_subtitle" />

            <TextView
                android:id="@+id/inviteCodeTextView"
                style="@style/TextAppearance.Kumbaram.Title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/empty_value"
                tools:text="ABCD2345EFGH67" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/generateInviteButton"
                    style="@style/Widget.Kumbaram.Button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:text="@string/main_admin_generate_invite" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/copyInviteButton"
                    style="@style/Widget.Kumbaram.Button.Outline"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/space_sm"
                    android:text="@string/copy" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        style="@style/Widget.Kumbaram.Text.SectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:paddingHorizontal="@dimen/space_md"
        android:text="@string/main_admin_businesses" />

    <murat.com.saasproject.ui.common.StateLayout
        android:id="@+id/stateLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/space_sm"
            android:paddingBottom="@dimen/space_lg" />
    </murat.com.saasproject.ui.common.StateLayout>
</LinearLayout>
